--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_storage: ^10.3.3
   flutter:
     sdk: flutter
+  mask_text_input_formatter: ^2.3.0
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
