--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.0.3
+  build_runner: ^2.2.0
   cloud_firestore: ^3.4.1
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
@@ -39,13 +40,18 @@ dependencies:
   firebase_storage: ^10.3.3
   flutter:
     sdk: flutter
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
   mask_text_input_formatter: ^2.3.0
   provider: ^6.0.3
 
 dev_dependencies:
+  build_runner: ^2.1.5
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+
+  hive_generator: ^1.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
